--- a/Portafolio.html
+++ b/Portafolio.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <header>
-        <h1>Header</h1>
+        <h3>Logo</h3>
+        <ol>
+            <li>
+                <a>Proyectos</a>
+            </li>
+            <li>
+                <a>Contacto</a>
+            </li>
+        </ol>
     </header>
     
     <section>
