Proyectos con imagenes a lado

--- a/Portafolio.html
+++ b/Portafolio.html
@@ -21,7 +21,7 @@
                 <a href="#contacto">Contacto</a>
             </li>
         </ol>
-    </header>
+    </header> 
     
     <section class="hero">
         <h1 class="hero-title">
@@ -49,27 +49,31 @@
             </figure>
         </article>
         <article class="UNOpy">
-            <h3 class="UNOpy-title">UNOpy en consola</h3>
-            <h4 class="UNOpy-programming">Python</h4>
-            <p class="UNOpy-date"><small><strong>Fecha: </strong>Junio 2019</small></p>
-            <p class="UNOpy-GithubLink"><small><strong>Ver: </strong><a href="https://github.com/Nyasper/UNOPy">Github</a></small></p>
-            <p class="UNOpy-Description">
-                Este es el juego de UNO Cartas progranado en Python, se juega<br>
-                en una interfaz grafica hecha en consola y es de 2 a 4 juagdadores.
-            </p>
+            <div class="UNOpy-info">
+                <h3 class="UNOpy-title">UNOpy en consola</h3>
+                <h4 class="UNOpy-programming">Python</h4>
+                <p class="UNOpy-date"><small><strong>Fecha: </strong>Junio 2019</small></p>
+                <p class="UNOpy-GithubLink"><small><strong>Ver: </strong><a href="https://github.com/Nyasper/UNOPy">Github</a></small></p>
+                <p class="UNOpy-Description">
+                    Este es el juego de UNO Cartas progranado en Python, se juega<br>
+                    en una interfaz grafica hecha en consola y es de 2 a 4 juagdadores.
+                </p>
+            </div>
             <figure class="UNOpy-imageWrapper">
                 <img class="UNOpy-image" src="Images/UnoPy.png" alt="UNO.py" width="250">
             </figure>
         </article>
         <article class="LRC">
-            <h3 class="LRC-title">Calculadora de Regresion Lineal</h3>
-            <h4 class="LRC-programming">Python</h4>
-            <p class="LRC-date"><small><strong>Fecha: </strong>Septiembre 2019</small></p>
-            <p class="LRC-GithubLink"><small><strong>Ver: </strong><a href="https://github.com/Nyasper/LinearRegressionCalulator">Github</a></small></p>
-            <p class="LRC-Description">
-                Es una herramienta para sacar la ecuacion de la recta tomando como<br>
-                parametros los datos en X e Y.
-            </p>
+            <div class="LRC-info">
+                <h3 class="LRC-title">Calculadora de Regresion Lineal</h3>
+                <h4 class="LRC-programming">Python</h4>
+                <p class="LRC-date"><small><strong>Fecha: </strong>Septiembre 2019</small></p>
+                <p class="LRC-GithubLink"><small><strong>Ver: </strong><a href="https://github.com/Nyasper/LinearRegressionCalulator">Github</a></small></p>
+                <p class="LRC-Description">
+                    Es una herramienta para sacar la ecuacion de la recta tomando como<br>
+                    parametros los datos en X e Y.
+                </p>
+            </div>
             <figure class="LRC-imageWrapper">
                 <img class="LRC-image" src="Images\RC.png" alt="LRC.py" width="250">
             </figure>
