--- a/Portafolio.html
+++ b/Portafolio.html
@@ -33,21 +33,6 @@
     
     <section id="proyectos">
         <h2 id="p-title">Proyectos</h2>
-        <article class="UNO">
-            <div class="proyecto-info">
-                <h3 class="UNO-title">UNO en consola</h3>
-                <h4 class="UNO-programming">Java</h4>
-                <p class="UNO-date"><small><strong>Fecha: </strong>Mayo 2019</small></p>
-                <p class="UNO-GithubLink"><small><strong>Ver: </strong><a href="https://github.com/Nyasper/UNO">Github</a></small></p>
-                <p class="UNO-Description">
-                    Este es el juego de UNO Cartas progranado en Java, se juega<br>
-                    en una interfaz grafica hecha en consola y es de 2 a 4 juagdadores.
-                </p>
-            </div>
-            <figure class="UNO-imageWrapper">
-                <p>Imagen</p>
-            </figure>
-        </article>
         <article class="UNOpy">
             <div class="UNOpy-info">
                 <h3 class="UNOpy-title">UNOpy en consola</h3>
@@ -80,6 +65,21 @@
         </article>
     </section>
     
+    <article class="UNO">
+        <div class="proyecto-info">
+            <h3 class="UNO-title">UNO en consola</h3>
+            <h4 class="UNO-programming">Java</h4>
+            <p class="UNO-date"><small><strong>Fecha: </strong>Mayo 2019</small></p>
+            <p class="UNO-GithubLink"><small><strong>Ver: </strong><a href="https://github.com/Nyasper/UNO">Github</a></small></p>
+            <p class="UNO-Description">
+                Este es el juego de UNO Cartas progranado en Java, se juega<br>
+                en una interfaz grafica hecha en consola y es de 2 a 4 juagdadores.
+            </p>
+        </div>
+        <figure class="UNOpy-imageWrapper">
+            <img class="UNOpy-image" src="Images/uno.png" alt="UNO.py" width="250">
+        </figure>
+    </article>
     <section id="contacto" class="contacto">
         <h1>Contacto</h1>
         <form action="/suscripcion/">
