--- a/Portafolio.html
+++ b/Portafolio.html
@@ -29,6 +29,9 @@
             Soy un estudiante de Ingenieria Electrica Electronica y un
             apasionado del desarrollo de <strong>Machine Learning en Python</strong>.
         </h1>
+        <figure class="hero-img">
+            <img src="Images/ErikL.png" alt="HeroI", height="300">
+        </figure>
     </section>
     
     <section id="proyectos">
